crates/rome_diagnostics/tests/macros/unknown_field_attr.rs
use rome_diagnostics::v2::Diagnostic;

#[derive(Debug, Diagnostic)]
struct TestDiagnostic {
    #[unknown_attr]
    field: bool,
}

fn main() {}
